test/sema/enum-associated-value-mismatch.delta.output
enum-associated-value-mismatch.delta:9:16: error: too few arguments to 'A', expected 2
    var a = E.A(a: 1);
               ^
