test/sema/enum-associated-value-mismatch.delta
// RUN: %check_errors %not %delta -typecheck %s

enum E {
    A(int a, int b)
}

void main() {
    // CHECK: [[@LINE+1]]:16: error: too few arguments to 'A', expected 2
    var a = E.A(a: 1);
}
